project(HackerRank/Algorithms/Warmup C)

add_executable(solve-me-first solve-me-first.c)
add_executable(simple-array-sum simple-array-sum.c)
add_executable(a-very-big-sum a-very-big-sum.c)
add_executable(diagonal-difference diagonal-difference.c)
add_executable(staircase staircase.c)
add_executable(time-conversion time-conversion.c)
