project(HackerRank/Mathematics/Fundementals C)
use_c99()

add_executable(find-point find-point.c)
add_executable(minimum-draws minimum-draws.c)

# add_executable(sherlock-and-moving-tiles sherlock-and-moving-tiles.c)
# target_link_libraries(sherlock-and-moving-tiles m)

add_executable(handshake handshake.c)
